ide50 (84) 2015; urgency=medium

  * add staff solutions for pset6
  * for now, update50 sets python version to python3 in project settings

 -- CS50 <sysadmins@cs50.harvard.edu>  Fri, 21 Oct 2016 23:45:00 -0400

ide50 (83) 2015; urgency=medium

  * update lib50-python dependence

 -- CS50 <sysadmins@cs50.harvard.edu>  Mon, 17 Oct 2016 23:59:00 -0400

ide50 (82) 2015; urgency=medium

  * add lib50-java dependence
  * update lib50-python dependence
  * update VALGRIND_OPTS environment variable

 -- CS50 <sysadmins@cs50.harvard.edu>  Sun, 16 Oct 2016 11:30:00 -0400

ide50 (81) 2015; urgency=medium

  * update lib50-python version dependence

 -- CS50 <sysadmins@cs50.harvard.edu>  Mon, 03 Oct 2016 12:15:00 -0400

ide50 (80) 2015; urgency=medium

  * add lib50-python dependence
  * add VALGRIND_OPTS to environment

 -- CS50 <sysadmins@cs50.harvard.edu>  Mon, 03 Oct 2016 04:00:00 -0400

ide50 (79) 2015; urgency=medium

  * update version dependence of help50
  * alias make
  * add to CFLAGS

 -- CS50 <sysadmins@cs50.harvard.edu>  Sun, 02 Oct 2016 07:15:00 -0400

ide50 (78) 2015; urgency=medium

  * update version dependence of help50

 -- CS50 <sysadmins@cs50.harvard.edu>  Wed, 28 Sep 2016 22:00:00 -0400

ide50 (77) 2015; urgency=medium

  * update version dependence of help50

 -- CS50 <sysadmins@cs50.harvard.edu>  Sun, 25 Sep 2016 21:00:00 -0400

ide50 (76) 2015; urgency=medium

  * update version dependence of submit50

 -- CS50 <sysadmins@cs50.harvard.edu>  Mon, 19 Sep 2016 18:00:00 -0400

ide50 (75) 2015; urgency=medium

  * update version dependence of submit50

 -- CS50 <sysadmins@cs50.harvard.edu>  Fri, 16 Sep 2016 22:30:00 -0400

ide50 (74) 2015; urgency=medium

  * update version dependence of submit50

 -- CS50 <sysadmins@cs50.harvard.edu>  Fri, 16 Sep 2016 17:30:00 -0400

ide50 (73) 2015; urgency=medium

  * add dependence on submit50

 -- CS50 <sysadmins@cs50.harvard.edu>  Fri, 16 Sep 2016 11:00:00 -0400

ide50 (72) 2015; urgency=medium
