@@ -1,3 +1,9 @@
+ide50 (85) 2015; urgency=medium
+
+  * add ~/.local/bin to PATH environment variable
+
+ -- CS50 <sysadmins@cs50.harvard.edu>  Sat, 22 Oct 2016 10:30:00 -0400
+
 ide50 (84) 2015; urgency=medium
 
   * add staff solutions for pset6
